# os-ai-map

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  propose-a-category.yml  report-an-error.yml  suggest-a-product.yml
.github/workflows/: refresh-data.yml  regenerate.yml  validate.yml
docs/: catalog-gaps.md
docs/guides/: notebooks.md  queries.md
docs/runbooks/: deploy-udms.md  publish-notebook.md  refresh-data.md
docs/schemas/: category.schema.json  organization.schema.json  product.schema.json  score.schema.json  taxonomy.schema.json
notebooks/: ai-stack-map.py  products-view.py
skills/add-data-source/: SKILL.md
skills/add-product/: SKILL.md
skills/curate-category/: SKILL.md
skills/pyoso-analyst/: SKILL.md
sources/: taxonomy.yaml
sources/categories/: agent_tools_protocols.yaml  base_pretrained.yaml  benchmark_eval_data.yaml  deployment.yaml  evaluation_code.yaml  finetuned_chat.yaml  finetuning_code.yaml  inference_code.yaml  orchestration_agents.yaml  telemetry_observability.yaml  ui_api.yaml
sources/organizations/: 01-ai.yaml  a2a-project-google-initiated.yaml  agent-infra.yaml  agenta-ai.yaml  agentops-ai.yaml  ai2.yaml  ai21-labs.yaml  aider-ai.yaml  algolia.yaml  alibaba-cloud.yaml  alibaba.yaml  all-hands-ai.yaml  allen-institute-for-ai.yaml  amazon-web-services.yaml  (+143 more)
tests/: test_convert_roundtrip.py  test_orgs.py  test_serialize.py  test_slugs.py  test_validate.py
warehouse/: sources.yaml
(+618 files in other folders)
