[project]
name = "os-ai-map"
version = "0.1.0"
description = "Open Source AI Map: curated data + modeling behind the AI Stack Map"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pyoso",
    "marimo",
    "pandas",
    "plotly",
    "jsonschema>=4.0",
    "requests>=2.34.2",
    "huggingface-hub>=1.18.0",
    "datasets>=5.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
